--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,9 @@ inputs:
   target-branch:
     description: "Target branch"
     required: true
+  github-token:
+    description: "GitHub Token"
+    required: true
 outputs:
   pr-number:
     description: "Pull Request Number"
@@ -22,34 +25,18 @@ outputs:
 
 runs:
   using: "composite"
+  env:
+    DRY_RUN: ${{ contains(inputs.dry-run, 'true') }}
+    SOURCE: ${{ inputs.source-branch }}
+    TARGET: ${{ inputs.target-branch }}
   steps:
-    - name: Set Variables
+    - name: Validate
       shell: bash
       run: |
-        TARGET=$(echo ${{ matrix.branch }} | sed 's/dev\///')
-        SOURCE=${{ matrix.branch }}
-
-        if [ -z "$TARGET" ]; then
-          echo "TARGET is empty"
-          exit 1
-        fi
-      
-        if [ -z "$SOURCE" ]; then
-          echo "SOURCE is empty"
-          exit 1
-        fi
-
         if [ "$SOURCE" == "$TARGET" ]; then
           echo "SOURCE is the same as TARGET"
           exit 1
         fi
-
-        echo "DRY_RUN=${{ env.DRY_RUN }}"
-        echo "SOURCE=$SOURCE"
-        echo "TARGET=$TARGET"
-
-        echo "SOURCE=$SOURCE" >> $GITHUB_ENV
-        echo "TARGET=$TARGET" >> $GITHUB_ENV
     - name: Checkout code
       uses: actions/checkout@v4
       with:
@@ -107,7 +94,7 @@ runs:
       with:
         version: ${{ steps.gitversion.outputs.NuGetVersionV2 }}
         head-ref: ${{ env.TARGET }}
-        github-token: ${{ secrets.JCDC_BOT_TOKEN }}
+        github-token: ${{ inputs.github-token }}
         include-version-as-heading: true
         include-compare-link: false
         include-links: true
@@ -123,7 +110,7 @@ runs:
 
           ## Files Changed
           ${{ env.DIFF }}
-        GITHUB_TOKEN: ${{ secrets.JCDC_BOT_TOKEN }}
+        GITHUB_TOKEN: ${{ inputs.github-token }}
       uses: pyrbin/single-pr-updater@latest
       with:
         label: 🚀 release
