--- a/action.yml
+++ b/action.yml
@@ -25,16 +25,48 @@ outputs:
 
 runs:
   using: "composite"
-  env:
-    DRY_RUN: ${{ contains(inputs.dry-run, 'true') }}
-    SOURCE: ${{ inputs.source-branch }}
-    TARGET: ${{ inputs.target-branch }}
   steps:
+    - name: Set Variables
+      run: |
+        echo "Setting variables"
+        SOURCE=${{ inputs.source-branch }}
+        TARGET=${{ inputs.target-branch }}
+        DRY_RUN=${{ contains(inputs.dry-run, 'true') }}
+
+        echo "SOURCE=$SOURCE"
+        echo "TARGET=$TARGET"
+        echo "DRY_RUN=$DRY_RUN"
+
+        echo "SOURCE=$SOURCE" >> $GITHUB_ENV
+        echo "TARGET=$TARGET" >> $GITHUB_ENV
+        echo "DRY_RUN=$DRY_RUN" >> $GITHUB_ENV
     - name: Validate
       shell: bash
       run: |
+        if [ -z "$SOURCE" ]; then
+          echo "SOURCE is empty"
+          exit 1
+        fi
+
+        if [ -z "$TARGET" ]; then
+          echo "TARGET is empty"
+          exit 1
+        fi
+
         if [ "$SOURCE" == "$TARGET" ]; then
           echo "SOURCE is the same as TARGET"
+          exit 1
+        fi
+
+        # check if source is a valid ref
+        if ! git rev-parse --verify $SOURCE > /dev/null 2>&1; then
+          echo "$SOURCE is not a valid ref"
+          exit 1
+        fi
+
+        # check if target is a valid ref
+        if ! git rev-parse --verify $TARGET > /dev/null 2>&1; then
+          echo "$TARGET is not a valid ref"
           exit 1
         fi
     - name: Checkout code
