--- a/action.yml
+++ b/action.yml
@@ -105,7 +105,8 @@ runs:
         $DIFF_SNIPPET
         "
 
-        DIFF_TEXT="## Files Changed\\\`\\\`\\\`DIFF
+        DIFF_TEXT="## Files Changed
+        \\\`\\\`\\\`diff
         ${DIFF_SNIPPET}
         \\\`\\\`\\\`"
         
